8. kisZH elméleti kérdései
1. és 7. kérdés javítása

--- a/kiszh/kiszh_08/kiszh_08.tex
+++ b/kiszh/kiszh_08/kiszh_08.tex
@@ -20,9 +20,10 @@
 \def\lima{\displaystyle\lim_{a}}
 \def\fabr{f:(a,b)\to\R}
 \begin{enumerate}
-	\item \textbf{Milyen állítást ismer a ($+\infty$)-beli aszimptota meghatározására?}\\[0.1cm] $f$-nek $+\infty$-ben van aszimptotája, ha
-	$\exists a,b\in\R,l(x)=ax+b$ esetén $\exists\lim\limits_{+\infty}
-	(f-l)=0$
+	\item \textbf{Milyen állítást ismer a ($+\infty$)-beli aszimptota meghatározására?}\\[0.1cm]
+	\textbf{i,} Ha $\lim\limits_{+\infty}f=a\in\R\Rightarrow y=a$ vízszintes aszimptota
+	\\[0.1cm]\textbf{ii,} Ha $\lim\limits_{+\infty}f=\pm\infty$ és $\lim\limits_{+\infty}	\frac{f(x)}{x}=a\in\R$ és $\lim\limits_{+\infty}(f(x)-ax)=
+	b\in\R\Rightarrow y=ax+b$ ferde aszimptota
 	\item \textbf{Milyen ekvivalens átfogalmazást ismer a pontbeli deriválhatóságra a lineáris \\ közelítéssel?}\\[0.1cm]$f\in\rtr,\quad a\in int\D_f\quad$ Ekkor\\[0.1cm]$\fda\Leftrightarrow\exists A\in\R, \exists\varepsilon:\D_f\to\R,\lima\varepsilon=0$ és $f(x)-f(a)=A(x-a)+ \varepsilon(x)(x-a)\quad(x\in\D_f)$\\[0.1cm]Ekkor $A=f'(a)$
 	\item \textbf{Milyen elégséges feltételt ismer differenciálható függvény szigorú monoton \\ csökkenésével kapcsolatban?}\\[0.1cm]Tfh. $f\dab$ Ekkor: \\[0.1cm]\hspace*{0.3cm} $f'<0\quad (a,b)$-n $\Rightarrow f$ szigorú monoton csökken $(a,b)$-n
 	\item \textbf{Hogyan szól a lokális minimumra vonatkozó elsőrendű elégséges feltétel?}\\[0.1cm]Tfh. $f\dab,c\in(a,b)$ és $f'(c)=0$\\[0.1cm]Ha $f'$ negatívból pozitívba megy akkor lokális minimum.
@@ -33,8 +34,9 @@
 	\item \textbf{Jellemezze egy függvény \textit{konvexitását} a második derivált segítségével}\\[0.1cm]
 	$\fabr$, ha $f\in\D^2(a,b)$, akkor\\[0.1cm]
 	$f$ konvex $\Leftrightarrow f''\geq0\quad(a,b)$-n
-	\item \textbf{Milyen állítást ismer a ($-\infty$)-beli aszimptota meghatározására?}\\[0.1cm] $f$-nek $-\infty$-ben van aszimptotája, ha
-	$\exists a,b\in\R,l(x)=ax+b$ esetén $\exists\lim\limits_{-\infty}
-	(f-l)=0$
+	\item \textbf{Milyen állítást ismer a ($-\infty$)-beli aszimptota meghatározására?}\\[0.1cm]
+	\textbf{i,} Ha $\lim\limits_{-\infty}f=a\in\R\Rightarrow y=a$ vízszintes aszimptota
+	\\[0.1cm]\textbf{ii,} Ha $\lim\limits_{-\infty}f=\pm\infty$ és $\lim\limits_{-\infty}	\frac{f(x)}{x}=a\in\R$ és $\lim\limits_{-\infty}(f(x)-ax)=
+	b\in\R\Rightarrow y=ax+b$ ferde aszimptota
 \end{enumerate}
 \end{document}
