9. kisZH elméleti kérdései
Hibajavítás a 32. sorban

--- a/kiszh/kiszh_09/kiszh_09.tex
+++ b/kiszh/kiszh_09/kiszh_09.tex
@@ -29,7 +29,7 @@
 		\textit{L'Hospital szabályt.}\\[0.1cm]
 		Tfh. \textbf{i,} $f,g\dab,\quad(-\infty\leq a<b<\infty)$\\[0.2cm] 
 		\hspace*{0.8cm}\textbf{ii,} $g'(x)\neq0,\quad x\in(a,b)$\\[0.2cm] 
-		\hspace*{0.8cm}\textbf{iii,} $\limaj f=\limaj g=\infty$\\[0.2cm]
+		\hspace*{0.8cm}\textbf{iii,} $\limaj f=+\infty$ és $\limaj g=-\infty$\\[0.2cm]
 		\hspace*{0.8cm}\textbf{iv,} $\exists\limaj\frac{f'}{g'}$ és $\limaj
 		\frac{f'}{g'}=A\in\Rv$\\[0.2cm] Ekkor: $\exists\limaj\frac{f}{g}$ és $\limaj\frac{f}{g}=\limaj\frac{f'}{g'}$
 		\item \textbf{Fogalmazza meg a hatványsor összegfüggvényének a deriválására vonatkozó tételt.}\\[0.1cm]
