10. kisZH elméleti kérdései
Hibajavítás a 3. kérdésben

--- a/kiszh/kiszh_10/kiszh_10.tex
+++ b/kiszh/kiszh_10/kiszh_10.tex
@@ -22,8 +22,9 @@
 		polinomja\hspace{1cm}Jel: $T_nf(x)$
 		\item\textbf{Fogalmazza meg a} \textit{Taylor-formula Lagrange maradéktaggal}
 		\textbf{néven tanult tételt.}\\[0.1cm]
-		Ha $f\in\D^{(n+1)}(K(a))$, akkor\\[0.1cm]$\forall x\in K(a),\exists\xi\in(a,x):
-		f(x)=\sum\limits_{k=0}^{n}\frac{f^{(k)}(a)}{k!}(x-a)^k+\frac{f^{(n+1)}(\xi)}{(n+1)!}(x-a)^{n+1}$
+		Ha $f\in\D^{(n+1)}(K(a))$, akkor\\[0.1cm]$\forall x\in K(a),\exists\xi\in(a,x)
+		\cup(x,a):f(x)=\sum\limits_{k=0}^{n}\frac{f^{(k)}(a)}{k!}(x-a)^k+
+		\frac{f^{(n+1)}(\xi)}{(n+1)!}(x-a)^{n+1}$
 		\item\textbf{Milyen} \textit{elégséges feltételt}
 		\textbf{ismer arra, hogy egy függvény Taylor sora előállítja a\\függvényt?}
 		\\[0.1cm]
