1.ZH-n kért tételbizonyítások

--- a/zh/zh1/tetelek_zh1.tex
+++ b/zh/zh1/tetelek_zh1.tex
@@ -262,6 +262,7 @@ f(b)-\lambda g(b)\Leftrightarrow\lambda=\frac{f(b)-f(a)}{g(b)-g(a)}\\[0.2cm]
 \\[0.2cm]\textbf{3. Lagrange-tétel}\\[0.1cm]\tetel Tfh. $f\cab,f\dab$\\[0.2cm]Ekkor
 $\exists\xi\in(a,b):\frac{f(b)-f(a)}{b-a}=f'(\xi)$\\[0.2cm]\biz Legyen $g(x)=x
 \Rightarrow g'(x)=1\neq0\quad$ Így alkalmazható rá a Cauchy-tétel$\bizva$
+\newpage
 \section{A monotonitásra vonatkozó szükséges, és \\ szükséges és elégséges feltételek.}
 \subsection{Szükséges Feltétel}
 \tetel Tfh. $f\dab$ Ekkor: \\[0.1cm]\hspace*{0.3cm}\textbf{i,} $f'\geq0\quad(a,b)$-n
@@ -272,7 +273,7 @@ $(a,b)$-n\\[0.1cm]\hspace*{0.3cm}\textbf{iv,} $f'<0\quad (a,b)$-n $\Rightarrow f
 szigorú monoton fogy $(a,b)$-n\\[0.2cm]\biz \\[0.1cm]\textbf{i,} Legyen
 $[x_1,x_2]\subset(a,b)$ A Lagrange tétel miatt $\exists\xi\in
 (x_1,x_2):\\[0.2cm]f(x_2)-f(x_1)=f'(\xi)(x_2-x_1)\geq0\Rightarrow f$ monoton
-nő.\\[0.1cm]\textbf{ii,} Ugyanígy\newpage\textbf{iii,} A Lagrange tétel után
+nő.\\[0.1cm]\textbf{ii,} Ugyanígy\\[0.1cm]\textbf{iii,} A Lagrange tétel után
 $\Rightarrow\exists\xi\in (x_1,x_2):\\[0.2cm]f(x_2)-f(x_1)=f'(\xi)(x_2-x_1)>0
 \Rightarrow f$ szigorú monoton nő\\[0.1cm]\textbf{iv,} Ugyanígy. $\bizva$
 \subsection{Szükséges és elégséges feltétel}
