--- a/ea/ea_08/ea_08.tex
+++ b/ea/ea_08/ea_08.tex
@@ -48,14 +48,14 @@ F''(x)=f''(x)-\sum\limits_{k=2}^{n}\frac{f^{(k)}(a)}{k!}\cdot k\cdot(k-1)
 F^{(n+1)}(x)=f^{(n+1)}(x)$\\[0.2cm]Legyen $G(x)=(x-a)^{(n+1)}\Rightarrow G(a)=0
 \\[0.2cm]G'(x)=(n+1)(x-a)^n\Rightarrow G'(a)=0,...,G''(a)=0\\[0.2cm]\Rightarrow
 G^{(n)}(a)=0,\quad G^{(n+1)}(a)=(n+1)!$\\[0.2cm]Alkalmazzuk a Cauchy
-középértéktételt:$\quad\exists$ ilyen $\xi_1,\xi_2...\xi_{n+1}\\[0.2cm]$
+középértéktételt:$\quad\exists$ ilyen $\xi_1,\xi_2...\xi_{n+1}$\\
 \[\frac{f(x)-\sum\limits_{k=0}^{n}\frac{f^{(k)}(a)}{k!}(x-a)^k}{(x-a)^{(n+1)}}=
 \frac{F(x)}{G(x)}=\frac{F(x)-F(a)}{G(x)-G(a)}=\frac{F'(\xi_1)}{G'(\xi_1)}=
 \frac{F'(\xi_1)-F'(a)}{G'(\xi_1)-G'(a)}=\frac{F''(\xi_2)}{G''(\xi_2)}=...=\] 
 \[=\frac{F^{(n)}(\xi_n)}{G^{(n)}(\xi_n)}=\frac{F^{(n)}(\xi_n)-F^{(n)}(a)}
 {G^{(n)}(\xi_n)-G^{(n)}(a)}=\frac{F^{(n+1)}(\xi_{n+1})}{G^{(n+1)}(\xi_{n+1})}=
 \frac{f^{(n+1)}(\xi_{n+1})}{(n+1)!}\]
-Legyen $\xi=\xi_{n+1}\bizva$\\[0.3cm]
+Legyen $\xi=\xi_{n+1}\bizva$\\[0.1cm]
 \hspace*{0.8cm}\underline{Megj:} $n=0:\exists\xi:f(x)=f(a)+f'(\xi)(x-a)\\[0.2cm]
 \Rightarrow\exists\xi\in(a,x):\frac{f(x)-f(a)}{x-a}=f'(\xi)\quad$ Lagrange középérték tétel miatt.\\[0.3cm]\tetel
 Tfh. $f\in\D^\infty(K(a))\text{ és }sup\{\abs{f^{(n)}(x)}\quad n\in\N,x\in 
