--- a/ea/ea_11/ea_11.tex
+++ b/ea/ea_11/ea_11.tex
@@ -87,7 +87,8 @@ _{\in\rab}=f\cdot g\underbrace{-g\cdot m_f-f\cdot m_g+m_f\cdot m_g}_{\in\rab}
 \frac{\abs{g(y)-g(x)}}{\abs{g(x)\cdot g(y)}}\leq\frac{G_i-g_i}{m^2}\Rightarrow
 \sup\limits_{\intv}\frac{1}{g}-\inf\limits_{\intv}\frac{1}{g}\leq
 \frac{G_i-g_i}{m^2}\]
-$\Rightarrow\Omega(\frac{1}{g},\tau)=\sumi(\sup\limits_{\intv}\frac{1}{g}-\inf\limits_{\intv}\frac{1}{g})\cdot(x_i-x_{i-1})=
+$\Rightarrow\Omega(\frac{1}{g},\tau)=\sumi(\sup\limits_{\intv}\frac{1}{g}-
+\inf\limits_{\intv}\frac{1}{g})\cdot(x_i-x_{i-1})\leq
 \frac{1}{m^2}\Omega(g,\tau)\\[0.2cm]\forall\varepsilon>0,\exists\tau,\Omega(g,\tau)
 <\varepsilon\Rightarrow\Omega(\frac{1}{g},\tau)\leq\frac{\varepsilon}{m^2}\bizva$
 \\[0.3cm]\tetel Legyen $c\in[a,b]$, ekkor:\\[0.2cm]
