Vizsgán kért tételbizonyítások
Small fix

--- a/vizsga/tetelek/tetelek_vizsga.tex
+++ b/vizsga/tetelek/tetelek_vizsga.tex
@@ -215,8 +215,8 @@ f^{-1}(y)\to f^{-1}(\eta)\\[0.1cm]\Rightarrow x\to\xi\\[0.2cm](f^{-1})'(\eta)
 x_0\in K_R(a)$ és\\$f'(x_0)=\sume n\cdot\alpha_n\cdot(x_0-a)^{n-1},\quad$ahol $x_0\in K_R(a)$\newpage
 \biz \underline{1. lépés:} Igazoljuk, 
 hogy $\sumun n\cdot\alpha_n\cdot r^n$ abszolút konvergens $\forall0<r<R$\\Legyen 
-$0<r<r'<R$ és $x=a+r'$\\[0.1cm]$x$-ben konvergens a hatványsor $\Rightarrow\
-sumun\alpha_n(r')^n$ konvergens $\Rightarrow\limn\alpha_n(r')^n=0
+$0<r<r'<R$ és $x=a+r'$\\[0.1cm]$x$-ben konvergens a hatványsor $\Rightarrow
+\sumun\alpha_n(r')^n$ konvergens $\Rightarrow\limn\alpha_n(r')^n=0
 \Rightarrow(\alpha_n(r')^n)$ korlátos\\[0.1cm] $\Rightarrow\exists M>0:
 |\alpha_n(r')^n|\leq M\Rightarrow |\alpha_n|\leq \frac{M}{(r')^n}
 \Rightarrow\sumun|n\cdot\alpha_n\cdot r^n|\leq M\cdot\sumun n\cdot
