--- a/ea/ea_01/ea_01.tex
+++ b/ea/ea_01/ea_01.tex
@@ -32,7 +32,7 @@
 Tantárgyi követelmények: \url{http://numanal.inf.elte.hu/~weisz/oktanyagok/Kov_An.pdf}\\[0.2cm]
 \textbf{{\large Folytonos függvények}}\\[0.1cm]
 \defi $f\in\R\to\R$ folytonos az $a\in D_f$ pontban, ha\\[0.2cm]
-$\forall\varepsilon>0,\exists\delta>0,\forall x\in D_f,0<|x-a|<\delta:
+$\forall\varepsilon>0,\exists\delta>0,\forall x\in D_f,|x-a|<\delta:
 |f(x)-f(a)|<\varepsilon$\\[0.1cm] Pl: \[\displaystyle f(x) = 
 \left\{
 \begin{gathered}
