Vizsgán kért definíciók

--- a/vizsga/definiciok/definiciok_vizsga.tex
+++ b/vizsga/definiciok/definiciok_vizsga.tex
@@ -48,7 +48,7 @@
 \end{center}
 \textbf{{\large Függyvények folytonossága}}
 \begin{enumerate}
-	\item \textbf{Definiálja egy $f\in\rtr$ függvény pontbeli folytonosságát.}\\[0.2cm] $f\in\R\to\R$ folytonos az $a\in D_f$ pontban, ha\\[0.2cm] $\forall\varepsilon>0,\exists\delta>0,\forall x\in D_f,0<|x-a|<\delta : |f(x)-f(a)|<\varepsilon$
+	\item \textbf{Definiálja egy $f\in\rtr$ függvény pontbeli folytonosságát.}\\[0.2cm] $f\in\R\to\R$ folytonos az $a\in D_f$ pontban, ha\\[0.2cm] $\forall\varepsilon>0,\exists\delta>0,\forall x\in D_f,|x-a|<\delta : |f(x)-f(a)|<\varepsilon$
 	\item \textbf{Mi a kapcsolat a pontbeli folytonosság és a határérték között?}\\[0.2cm]Ha $a\in D_f\cap D_f'$, akkor: \[ f\in C(a)\Leftrightarrow \exists\lim_a f \text{ és } \lim_a f=f(a)\]
 	\item \textbf{Hogyan szól a folytonosságra vonatkozó átviteli elv?}\\[0.2cm] Tfh. $a\in D_f$, ekkor: \[f\in C(a)\Leftrightarrow\forall(x_n):\N\to D_f, \lim(x_n)=a:\quad\lim(f(x_n))=f(a)\]
 	\item \textbf{Definiálja a megszüntethető szakadási hely fogalmát.}\\[0.1cm]
