--- a/zh/zh1/tetelek_zh1.tex
+++ b/zh/zh1/tetelek_zh1.tex
@@ -264,7 +264,7 @@ $\exists\xi\in(a,b):\frac{f(b)-f(a)}{b-a}=f'(\xi)$\\[0.2cm]\biz Legyen $g(x)=x
 \Rightarrow g'(x)=1\neq0\quad$ Így alkalmazható rá a Cauchy-tétel$\bizva$
 \newpage
 \section{A monotonitásra vonatkozó elégséges, és \\ szükséges és elégséges feltételek.}
-\subsection{Szükséges Feltétel}
+\subsection{Elégséges Feltétel}
 \tetel Tfh. $f\dab$ Ekkor: \\[0.1cm]\hspace*{0.3cm}\textbf{i,} $f'\geq0\quad(a,b)$-n
 $\Rightarrow f$ monoton nő $(a,b)$-n\\[0.1cm]\hspace*{0.3cm}\textbf{ii,}
 $f'\leq0\quad(a,b)$-n $\Rightarrow f$ monoton fogy $(a,b)$-n\\[0.1cm]
