Vizsgán kért definíciók
42. definíció kiegészítése

--- a/vizsga/definiciok/definiciok_vizsga.tex
+++ b/vizsga/definiciok/definiciok_vizsga.tex
@@ -133,7 +133,7 @@
 	$\alpha_n=\frac{f^{(n)}(a)}{n!}(n=0,1,2,...)$
 	\item\textbf{Hogyan definiálja egy függvény} \textit{Taylor-sorát}?\\[0.1cm]
 	Ha $f\in\D^{\infty}(a)$, ekkor a $\sum\frac{f^{(n)}(a)}{n!} 
-	\cdot(x-a)^{n}$ sort, az $f$ függyvény Taylor sorának nevezzük.
+	\cdot(x-a)^{n}$ sort\\az $f$ függyvény $a$ középpontú Taylor sorának nevezzük.
 	\item\textbf{Fogalmazza meg a} \textit{Taylor-formula Lagrange maradéktaggal}
 	\textbf{néven tanult tételt.}\\[0.1cm]
 	Ha $f\in\D^{(n+1)}(K(a))$, akkor\\[0.1cm]$\forall x\in K(a),\exists\xi\in(a,x)
