--- a/ea/ea_09/ea_09.tex
+++ b/ea/ea_09/ea_09.tex
@@ -133,7 +133,7 @@ $\int x(1+x^2)^{2017}dx=\frac{1}{2}\int 2x(1+x^2)^{2017}dx=\frac{1}{2}
 \quad f\circ g\cdot g'=g^\alpha\cdot g'$\\[0.4cm]
 \tetel (2. helyettesítéses szabály)\\[0.2cm]
 Tfh. $g:I\to J$ bijekció,$\quad g\in\D(I),\quad g'(x)\neq0,\quad x\in I,\quad
-f:I\to J$\\[0.2cm]Ha $\exists f\circ g\cdot g'$ \prfv, ekkor:\\[0.2cm]
+f:J\to\R$\\[0.2cm]Ha $\exists f\circ g\cdot g'$ \prfv, ekkor:\\[0.2cm]
 $\int f=(\int f\circ g\cdot g')\circ g^{-1}\quad\text{és}\quad\quad
 \int\limits_{x_0}f=(\int\limits_{x_0} f\circ g\cdot g')\circ g^{-1}$\\[0.2cm]
 \biz A jobb oldal legyen $H$, azaz:\\[0.2cm]
