Vizsgán kért definíciók
Hibajavítás a 195. sorban

--- a/vizsga/definiciok/definiciok_vizsga.tex
+++ b/vizsga/definiciok/definiciok_vizsga.tex
@@ -192,7 +192,7 @@
 	\item\textbf{Fogalmazza meg a \prfv ekkel kapcsolatos}
 	\textit{második helyettesítési szabályt.}\\[0.1cm]
 	Tfh. $g:I\to J$ bijekció,$\quad g\in\D(I),\quad g'(x)\neq0,\quad x\in I,\quad
-	f:I\to J$\\[0.2cm]Ha $\exists f\circ g\cdot g'$ \prfv, ekkor:\\[0.2cm]
+	f:J\to\R$\\[0.2cm]Ha $\exists f\circ g\cdot g'$ \prfv, ekkor:\\[0.2cm]
 	$\int f=(\int f\circ g\cdot g')\circ g^{-1}\quad\text{és}\quad\quad
 	\int\limits_{x_0}f=(\int\limits_{x_0} f\circ g\cdot g')\circ g^{-1}$
 	\item\textbf{Adjon meg legalább három olyan függvényt, amelyiknek
